--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<iframe id="reportFrame" src=""></iframe>
+<iframe id="reportFrame" src="https://app.powerbi.com/view?r=eyJrIjoiM2MyZWRjYWEtNzVhMy00NzQ4LWIxMDgtOGVlNjQ1MDBiYzY4IiwidCI6ImZiNWE4ZTU5LTg5YTktNDgyNC1hNDhlLTczNDcwM2NmMDlkNyIsImMiOjEwfQ%3D%3D"></iframe>
 
 <script>
   const urls = [
