--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 <body>
 
-<iframe id="reportFrame" src="https://app.powerbi.com/view?r=eyJrIjoiM2MyZWRjYWEtNzVhMy00NzQ4LWIxMDgtOGVlNjQ1MDBiYzY4IiwidCI6ImZiNWE4ZTU5LTg5YTktNDgyNC1hNDhlLTczNDcwM2NmMDlkNyIsImMiOjEwfQ%3D%3D"></iframe>
+<iframe id="reportFrame" src="https://app.powerbi.com/groups/80ec1c0d-7298-4d93-b1a1-31480ec1c8c5/reports/0c1d2c28-6083-4119-b62c-ae179724c467/6683e500a61eb65e3c67?experience=power-bi"></iframe>
 
 <script>
   const urls = [
-    "https://app.powerbi.com/view?r=eyJrIjoiM2MyZWRjYWEtNzVhMy00NzQ4LWIxMDgtOGVlNjQ1MDBiYzY4IiwidCI6ImZiNWE4ZTU5LTg5YTktNDgyNC1hNDhlLTczNDcwM2NmMDlkNyIsImMiOjEwfQ%3D%3D",
-    "https://app.powerbi.com/view?r=eyJrIjoiZjI1MzEzMWYtOGQwNC00ODU0LWI3NDAtM2UyNzQ0MGNmNGZjIiwidCI6ImZiNWE4ZTU5LTg5YTktNDgyNC1hNDhlLTczNDcwM2NmMDlkNyIsImMiOjEwfQ%3D%3D"
+    "https://app.powerbi.com/groups/80ec1c0d-7298-4d93-b1a1-31480ec1c8c5/reports/0c1d2c28-6083-4119-b62c-ae179724c467/6683e500a61eb65e3c67?experience=power-bi",
+    "https://app.powerbi.com/groups/80ec1c0d-7298-4d93-b1a1-31480ec1c8c5/reports/280cfcb4-a29a-4e7d-b4a0-93c319156c22/6683e500a61eb65e3c67?experience=power-bi"
   ];
 
   let currentIndex = 0;
