--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 <body>
 
-<iframe id="reportFrame" src="https://app.powerbi.com/groups/80ec1c0d-7298-4d93-b1a1-31480ec1c8c5/reports/0c1d2c28-6083-4119-b62c-ae179724c467/6683e500a61eb65e3c67?experience=power-bi"></iframe>
+<iframe id="reportFrame" src="https://app.powerbi.com/links/wcjT7btfz7?ctid=663409bb-de88-42fe-ad3e-e64428b19b87&pbi_source=linkShare"></iframe>
 
 <script>
   const urls = [
-    "https://app.powerbi.com/groups/80ec1c0d-7298-4d93-b1a1-31480ec1c8c5/reports/0c1d2c28-6083-4119-b62c-ae179724c467/6683e500a61eb65e3c67?experience=power-bi",
-    "https://app.powerbi.com/groups/80ec1c0d-7298-4d93-b1a1-31480ec1c8c5/reports/280cfcb4-a29a-4e7d-b4a0-93c319156c22/6683e500a61eb65e3c67?experience=power-bi"
+    "https://app.powerbi.com/links/wcjT7btfz7?ctid=663409bb-de88-42fe-ad3e-e64428b19b87&pbi_source=linkShare",
+    "https://app.powerbi.com/links/w9r3LtJodj?ctid=663409bb-de88-42fe-ad3e-e64428b19b87&pbi_source=linkShare"
   ];
 
   let currentIndex = 0;
