--- a/index.html
+++ b/index.html
@@ -2,27 +2,35 @@
 <html lang="ka">
 <head>
   <meta charset="UTF-8" />
-  <title>Power BI რეპორტების ცვლა</title>
+  <title>Power BI რეპორტების ცვლა ერთ ფანჯარაში</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
       background: #f4f4f4;
-      color: #333;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      color: #333;
     }
-    h1 {
+    button {
+      padding: 12px 24px;
+      font-size: 16px;
+      cursor: pointer;
       margin-bottom: 20px;
+    }
+    p {
+      max-width: 400px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>Power BI რეპორტების ავტომატური ცვლა</h1>
-  <p>ახალი ფანჯარა გაიხსნება ყოველ 20 წამში</p>
+
+  <button id="startBtn">რეპორტების ავტომატური გადართვა დაიწყო</button>
+  <p>დაჭირეთ ღილაკს, რომ გახსნათ რეპორტი ახალ ფანჯარაში და დაიწყოთ ავტომატური ცვლა ყოველ 20 წამში.</p>
 
   <script>
     const urls = [
@@ -32,20 +40,31 @@
 
     let currentIndex = 0;
     let reportWindow = null;
+    let intervalId = null;
 
-    function openReport() {
+    document.getElementById('startBtn').addEventListener('click', () => {
+      // თუ ფანჯარა უკვე ღიაა, დახურე
       if (reportWindow && !reportWindow.closed) {
         reportWindow.close();
       }
-      reportWindow = window.open(urls[currentIndex], "_blank");
-      currentIndex = (currentIndex + 1) % urls.length;
-    }
 
-    // პირველი report გაიხსნას როცა user დააჭერს
-    document.body.addEventListener("click", () => {
-      openReport(); // გახსნის პირველს
-      setInterval(openReport, 20000); // ცვლის ყოველ 20 წამში
+      // გახსნა ახალ ფანჯარაში
+      reportWindow = window.open(urls[currentIndex], '_blank');
+      currentIndex = (currentIndex + 1) % urls.length;
+
+      // ავტომატური გადართვა ყოველი 20 წამში
+      intervalId = setInterval(() => {
+        if (reportWindow && !reportWindow.closed) {
+          reportWindow.location.href = urls[currentIndex];
+          currentIndex = (currentIndex + 1) % urls.length;
+        } else {
+          // თუ ფანჯარა დახურულია, შეწყვიტე ცვლა
+          clearInterval(intervalId);
+          alert('Power BI რეპორტის ფანჯარა დახურულია, ავტომატური გადართვა შეჩერდა.');
+        }
+      }, 20000);
     });
   </script>
+
 </body>
 </html>
