--- a/index.html
+++ b/index.html
@@ -1,28 +1,70 @@
 <!DOCTYPE html>
 <html lang="ka">
 <head>
-<meta charset="UTF-8" />
-<title>iframe ბმულების ცვლა</title>
-<script>
-  const links = [
-    "https://app.powerbi.com/groups/25104f0b-b565-4a93-9430-edf082d27d14/reports/c9de70d0-424f-4424-ac67-8e7d9407d38c/be9768bd55ba3beed8c8?experience=power-bi",
-    "https://app.powerbi.com/groups/25104f0b-b565-4a93-9430-edf082d27d14/reports/c9de70d0-424f-4424-ac67-8e7d9407d38c/be9768bd55ba3beed8c8?experience=power-bi"
-  ];
-
-  let currentIndex = 0;
-
-  function changeIframeSrc() {
-    document.getElementById("myFrame").src = links[currentIndex];
-    currentIndex = (currentIndex + 1) % links.length;
-  }
-
-  window.onload = function() {
-    changeIframeSrc();
-    setInterval(changeIframeSrc, 20000); // 20 წამში ერთხელ
-  }
-</script>
+  <meta charset="UTF-8" />
+  <title>Power BI რეპორტების ცვლა ერთ ფანჯარაში</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      color: #333;
+    }
+    button {
+      padding: 12px 24px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-bottom: 20px;
+    }
+    p {
+      max-width: 400px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <iframe id="myFrame" style="width:100%; height:500px;" frameborder="0"></iframe>
+
+  <button id="startBtn">რეპორტების ავტომატური გადართვა დაიწყო</button>
+  <p>დაჭირეთ ღილაკს, რომ გახსნათ რეპორტი ახალ ფანჯარაში და დაიწყოთ ავტომატური ცვლა ყოველ 20 წამში.</p>
+
+  <script>
+    const urls = [
+      "https://app.powerbi.com/links/wcjT7btfz7?ctid=663409bb-de88-42fe-ad3e-e64428b19b87&pbi_source=linkShare",
+      "https://app.powerbi.com/links/w9r3LtJodj?ctid=663409bb-de88-42fe-ad3e-e64428b19b87&pbi_source=linkShare"
+    ];
+
+    let currentIndex = 0;
+    let reportWindow = null;
+    let intervalId = null;
+
+    document.getElementById('startBtn').addEventListener('click', () => {
+      // თუ ფანჯარა უკვე ღიაა, დახურე
+      if (reportWindow && !reportWindow.closed) {
+        reportWindow.close();
+      }
+
+      // გახსნა ახალ ფანჯარაში
+      reportWindow = window.open(urls[currentIndex], '_blank');
+      currentIndex = (currentIndex + 1) % urls.length;
+
+      // ავტომატური გადართვა ყოველი 20 წამში
+      intervalId = setInterval(() => {
+        if (reportWindow && !reportWindow.closed) {
+          reportWindow.location.href = urls[currentIndex];
+          currentIndex = (currentIndex + 1) % urls.length;
+        } else {
+          // თუ ფანჯარა დახურულია, შეწყვიტე ცვლა
+          clearInterval(intervalId);
+          alert('Power BI რეპორტის ფანჯარა დახურულია, ავტომატური გადართვა შეჩერდა.');
+        }
+      }, 20000);
+    });
+  </script>
+
 </body>
 </html>
