--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-  <button id="startBtn">რეპორტების ავტომატური გადართვა დაიწყო</button>
+  <button id="startBtn">რეპორტების ავტომატური გადართვა</button>
   <p>დაჭირეთ ღილაკს, რომ გახსნათ რეპორტი ახალ ფანჯარაში და დაიწყოთ ავტომატური ცვლა ყოველ 20 წამში.</p>
 
   <script>
