--- a/index.html
+++ b/index.html
@@ -1,79 +1,28 @@
 <!DOCTYPE html>
 <html lang="ka">
 <head>
-  <meta charset="UTF-8" />
-  <title>Power BI რეპორტების ცვლა ერთ ფანჯარაში</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      color: #333;
-    }
+<meta charset="UTF-8" />
+<title>iframe ბმულების ცვლა</title>
+<script>
+  const links = [
+    "https://example.com/link1",
+    "https://example.com/link2"
+  ];
 
-    button {
-      padding: 12px 24px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-bottom: 20px;
-    }
+  let currentIndex = 0;
 
-    p {
-      max-width: 400px;
-      text-align: center;
-    }
-  </style>
+  function changeIframeSrc() {
+    document.getElementById("myFrame").src = links[currentIndex];
+    currentIndex = (currentIndex + 1) % links.length;
+  }
+
+  window.onload = function() {
+    changeIframeSrc();
+    setInterval(changeIframeSrc, 30000); // 30 წამში ერთხელ
+  }
+</script>
 </head>
 <body>
-
-  <button id="startBtn">რეპორტების ავტომატური გადართვა</button>
-  <p>დაჭირეთ ღილაკს, რომ გახსნათ რეპორტი ახალ ფანჯარაში და დაიწყოთ ავტომატური ცვლა ყოველ 20 წამში.</p>
-
-  <script>
-    const urls = [
-      "https://app.powerbi.com/links/wcjT7btfz7?ctid=663409bb-de88-42fe-ad3e-e64428b19b87&pbi_source=linkShare",
-      "https://app.powerbi.com/links/w9r3LtJodj?ctid=663409bb-de88-42fe-ad3e-e64428b19b87&pbi_source=linkShare"
-    ];
-
-    let currentIndex = 0;
-    let reportWindow = null;
-    let intervalId = null;
-
-    document.getElementById('startBtn').addEventListener('click', () => {
-      // დახურე ძველი ფანჯარა თუ ჯერ კიდევ ღიაა
-      if (reportWindow && !reportWindow.closed) {
-        reportWindow.close();
-      }
-
-      // გამოითვალე ეკრანის ზომა
-      const screenWidth = window.screen.availWidth;
-      const screenHeight = window.screen.availHeight;
-
-      // გახსენი ახალი ფანჯარა თითქმის ფულსქრინზე
-      reportWindow = window.open(
-        urls[currentIndex],
-        '_blank',
-        `toolbar=no,scrollbars=yes,resizable=yes,width=${screenWidth},height=${screenHeight},top=0,left=0`
-      );
-      currentIndex = (currentIndex + 1) % urls.length;
-
-      // დაწყება ავტომატური ცვლის ყოველ 20 წამში
-      intervalId = setInterval(() => {
-        if (reportWindow && !reportWindow.closed) {
-          reportWindow.location.href = urls[currentIndex];
-          currentIndex = (currentIndex + 1) % urls.length;
-        } else {
-          clearInterval(intervalId);
-          alert('Power BI რეპორტის ფანჯარა დაიხურა — ავტომატური გადართვა შეჩერდა.');
-        }
-      }, 20000);
-    });
-  </script>
-
+  <iframe id="myFrame" style="width:100%; height:500px;" frameborder="0"></iframe>
 </body>
 </html>
